update docker compose file to use docker swarm in production to handke multiple container / loead balancing ...

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,9 @@ services:
     # build: ./Dockerfile.dev
     build: 
       context: .
-      target: development
+      # target: development
+      args:
+        - NODE_ENV=development
     volumes:
       - ./src:/app/src:ro
     environment:
