update docker compose file to use docker swarm in production to handke multiple container / loead balancing ...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   compose-node-app:
     image: hamzaelmkhantar/node-app
-    # platform: linux/amd64  
+    platform: linux/amd64  
     # container_name: node-app-container // we remove that to scale container to multiple instances, 2, 3 or more containers of this app !
     # ports:
     #   - "4000:4000"
@@ -25,7 +25,7 @@ services:
 
   mongo:
     image: mongo
-    # platform: linux/amd64  
+    platform: linux/amd64  
     restart: always
     # ports:
     #   - 27017:27017
@@ -60,13 +60,13 @@ services:
 
   redis:
     image: redis
-    # platform: linux/amd64
+    platform: linux/amd64
     depends_on:
       - mongo
 
   nginx:
     image: nginx:stable-alpine
-    # platform: linux/amd64
+    platform: linux/amd64
     ports:
       - "80:80"
     volumes:
